--- a/src/app/features/simulator/simulator/simulator.component.scss
+++ b/src/app/features/simulator/simulator/simulator.component.scss
@@ -268,6 +268,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  min-width: 0;
 
   select, input {
     margin-top: 12px;
